--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="counter.css">
+    <link rel="stylesheet" href="index.css">
     <title>ODC Evaluation | Counter (JS)</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
     <div class="div">
         <button id="dcBtn" class="dc-btn">-</button>
-        <p id="input-el">0</p>
+        <p id="input-el"> - 0 - </p>
         <button id="incBtn">+</button>
     </div>
     <div class="ndiv">
@@ -23,6 +23,6 @@
     </div>
     
 
-    <script src="counter.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
