add and modified the count status element and the functionality

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
     <div class="div">
         <button id="dcBtn" class="dc-btn">-</button>
-        <p id="input-el"> - 0 - </p>
+        <p class="count-el" id="input-el"> - 0 - </p>
         <button id="incBtn">+</button>
     </div>
     <div class="ndiv">
         <button type="reset" id="reset-btn" class="reset"> Reset! </button>
-        
+        <p class="count-status" id="countStatus"> Count #: 0 is reset ↙</p>
         <h5>Prince Luah Marwiah</h5>
     </div>
     
